--- a/m0807_navmenu/src/main/res/values/m0806.xml
+++ b/m0807_navmenu/src/main/res/values/m0806.xml
@@ -12,5 +12,6 @@
     <string name="rt002">右側選單二</string>
     <string name="rt003">右側選單三</string>
     <string name="rb001">右按鈕一</string>
+    <string name="test">test</string>
 
 </resources>
